2010-03-07  Stas Boukarev  <stassats@gmail.com>

	* swank-ecl.lisp (source-location): Don't do
	(setq file (tmpfile-to-buffer file)) in a COND condition,
	otherwise next cond clause will get null file.
	Apply translate-logical-pathname to pathnames.

2010-03-05  Helmut Eller  <heller@common-lisp.net>

	Remove some unused stuff.

	* swank-ccl.lisp (openmcl-set-debug-switches)
	(*interesting-internal-frames*)
	(interesting-frame-p): Unused. Deleted.

2010-03-05  Helmut Eller  <heller@common-lisp.net>

	* swank-ccl.lisp: Indentation fixes.

2010-03-05  Tobias C. Rittweiler <tcr@freebits.de>

	* swank-ecl.lisp: Make backend depend on ECL version 10.3.1 which
	just got released. We do not support older versions. Previous
	version pretty much didn't work in combination with Slime anyway.

2010-03-05  Tobias C. Rittweiler <tcr@freebits.de>

	Ecl: Make M-. work on function interactively compiled via C-c C-c.

	* swank-ecl.lisp (*tmpfile-map*, note-buffer-tmpfile)
	(tmpfile-to-buffer): New helpers.
	(swank-compile-string): Use them. Also use new COMPILE-FILE
	keywords :SOURCE-TRUENAME and :SOURCE-OFFSET available in ECL
	HEAD.
	(find-definitions): Slurp in definition of
	FIND-DEFINITIONS-BY-NAME.
	(find-definitions-by-name): Hence not needed anymore.
	(source-location): Use TMPFILE-TO-BUFFER to get buffer source
	location of interactively compiled functions.

2010-03-04  Mark Evenson  <evenson@panix.com>

	* swank-abcl.lisp (emacs-inspect): Define default method to use
	the result of SYS:INSPECTED-PARTS if non-nil.

2010-03-03  Stas Boukarev  <stassats@gmail.com>

	* doc/slime.texi (Inspector): document slime-inspector-eval.
	Patch by Mark Harig.

2010-03-03  Helmut Eller  <heller@common-lisp.net>

	Don't special case special operators with M-. for CMUCL.

	* swank-cmucl.lisp (function-definitions): Special operators will
	have IR1-translators anyway, so no need to mark them "special".
	(gf-definitions): Renamed from generic-function-definitions.
